<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
                android:background="@drawable/backkkkrooo"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".Fragment.LoginFragment">
    <TextView
            android:layout_marginTop="100dp"
            android:id="@+id/txttitleLogin"
            android:layout_marginLeft="30dp"
            android:textColor="@android:color/white"
            android:textSize="40dp"
            android:textStyle="bold"
            android:text="@string/Name_Button_SignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <EditText
            android:layout_marginRight="60dp"
            android:id="@+id/txtSDT_Login"
            android:hint="@string/hint_txtPhoneNumber"
            android:background="@drawable/background_editext"
            android:layout_marginTop="100dp"
            android:layout_below="@+id/txttitleLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <EditText
            android:layout_marginRight="60dp"
            android:id="@+id/txtPass_Login"
            android:hint="@string/hint_txtPass"
            android:background="@drawable/background_editext"
            android:layout_marginTop="9dp"
            android:layout_below="@+id/txtSDT_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <Button
            android:id="@+id/btnLogin"
            android:textColor="#fff"
            android:text="@string/Name_Button_SignIn"
            android:background="@drawable/background_button"
            android:layout_marginTop="60dp"
            android:layout_below="@+id/txtPass_Login"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"/>

    <TextView
            android:text="@string/Textview_txtForgetPass"
            android:textSize="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/txttitleLogin"/>

</RelativeLayout>